--- a/index.html
+++ b/index.html
@@ -1,49 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" type="image/x-icon" href="./myicon.ico" />
     <title>Practice</title>
     <style>
-        p {
-            color: red;
-          }
-        #one {
-            color: blue;
-        }
-        .meimei {
-            color: green;
-        }
+      p {
+        color: red;
+      }
+      #one {
+        color: blue;
+      }
+      .meimei {
+        color: green;
+      }
     </style>
-</head>
-<body>
-    <div style="
-    background-color: rgba(39, 149, 118, 0.654);
-    text-align: center;
-    padding: 20px;">
-    <img src="touxiang.png" alt="Practice" width="80px" height="80px">
+  </head>
+  <body>
+    <div
+      style="
+        background-color: rgba(39, 149, 118, 0.654);
+        text-align: center;
+        padding: 20px;
+      "
+    >
+      <img src="touxiang.png" alt="Practice" width="80px" height="80px" />
     </div>
-    <div style="
-    text-align: center;
-    max-width: 700px;
-    margin: 40px auto;
-    font-size: 17px;
-    line-height: 1.7;">
-    <p id="one">我是<b style="display: block;">马羽翮</b></p>
-    <p>很高兴见到你</p>
-    <p>你好，世界</p>
-    <p class="meimei">这是我的第一个网页，请多关照</p>
+    <div
+      style="
+        text-align: center;
+        max-width: 700px;
+        margin: 40px auto;
+        font-size: 17px;
+        line-height: 1.7;
+      "
+    >
+      <p id="one">我是<b style="display: block">马羽翮</b></p>
+      <p>很高兴见到你</p>
+      <p>你好，世界</p>
+      <p class="meimei">这是我的第一个网页，请多关照</p>
     </div>
-    <div style="
-    background-color: rgba(9, 149, 118, 0.654);
-    text-align: center;
-    padding: 20px;
-    height: 90px;
-    ">
-    <p>Copyright ex.chadiwan.cn</p>
-    <a href="https://www.baidu.com">My Link</a>
-
-</div>
-    
-</body>
+    <div
+      style="
+        background-color: rgba(9, 149, 118, 0.654);
+        text-align: center;
+        padding: 20px;
+        height: 90px;
+      "
+    >
+      <p>Copyright ex.chadiwan.cn</p>
+      <a href="https://www.baidu.com">My Link</a>
+    </div>
+  </body>
 </html>
